# STM32F4_SensorFusion

./: .gitignore  README.md
Inc/: app.h  ethernetif.h  main.h  stm32f4xx_it.h  tcp_server.h
Inc/Classes/: app_handler.h  debug_swv.h  input_parser.h  kf_passive_suspension.h  kf_tracking.h  network_data_handler.h  recursive_least_squares.h
Inc/Math/: linalg.h  matrix.h
Inc/Tests/: test_base.h  test_input_parser.h  test_kf_passive_suspension.h  test_kf_tracking.h  test_linear_algebra.h  test_matrix.h  test_network_data_handler.h  test_recursive_least_squares.h  tests_runner.h
MDK-ARM/: STM32F4_SensorFusion.uvprojx  startup_stm32f429xx.s
MDK-ARM/RTE/_STM32F4/: RTE_Components.h
Src/: ethernetif.cpp  main.cpp  stm32f4xx_it.c  tcp_server.cpp
Src/Classes/: app_handler.cpp  debug_swv.cpp  input_parser.cpp  kf_passive_suspension.cpp  kf_tracking.cpp  network_data_handler.cpp  recursive_least_squares.cpp
Src/Math/: add.cpp  linear_algebra.cpp  matrix.cpp  mul.cpp  scale.cpp  sub.cpp
Src/Tests/: test_base.cpp  test_input_parser.cpp  test_kf_passive_suspension.cpp  test_kf_tracking.cpp  test_linear_algebra.cpp  test_matrix.cpp  test_network_data_handler.cpp  test_recursive_least_squares.cpp  tests_runner.cpp
gtests/: CMakeLists.txt  gmock_input_parser.h  gmock_kf_passive_suspension.h  gmock_kf_tracking.h  gmock_recursive_least_squares.h  main.cpp
